<?xml version="1.0"?>
<package format="2">
  <name>limo_gazebo</name>
  <version>0.0.0</version>
  <description>The limo_gazebo package</description>

  <maintainer email="support@agilex.ai">agiley</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>limo_control</exec_depend>
  <exec_depend>limo_description</exec_depend>

  <export>
  </export>
</package>
